chapter14/tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      name: tomcat-pod
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:alpine
        resources:
          requests:
            cpu: 100m
            memory: 384Mi
          limits:
            cpu: 100m
            memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
spec:
  selector:
    app: tomcat
  type: NodePort
  ports:
  - name: http
    port: 8080
